# SKVM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml
cmake/: Package.cmake  Version.cmake  gtest.cmake
res/: Readme.txt  config.h.in  skvm.appdata.xml.in  skvm.desktop
src/: CMakeLists.txt
src/client/: CMakeLists.txt  MSWindowsClientTaskBarReceiver.cpp  MSWindowsClientTaskBarReceiver.h  resource.h  skvmc.cpp  skvmc.rc
src/daemon/: CMakeLists.txt  skvmd.cpp  skvmd.rc
src/gui/: CMakeLists.txt
src/gui/res/: SKVM.qrc  SKVM.qrc.bak
src/gui/res/lang/: gui_af-ZA.ts  gui_bg-BG.ts  gui_ca-AD.ts  gui_cs-CZ.ts  gui_cy.ts  gui_da.ts  gui_de.ts  gui_es.ts  gui_et-EE.ts  gui_fi.ts  gui_fr.ts  gui_gl.ts  gui_grk.ts  gui_he.ts  gui_hi.ts  gui_hr-HR.ts  gui_hu-HU.ts  gui_id.ts  gui_is-IS.ts  gui_it.ts  gui_ja-JP.ts  gui_ko.ts  gui_lt.ts  gui_lv.ts  gui_mr.ts  gui_nl-NL.ts  gui_no.ts  gui_pes-IR.ts  gui_pl-PL.ts  gui_pt-BR.ts  gui_pt-PT.ts  gui_ro.ts  gui_ru.ts  gui_si.ts  gui_sk-SK.ts  gui_sl-SI.ts  gui_sq-AL.ts  gui_sr.ts  gui_th-TH.ts  gui_tr-TR.ts  (+5 more)
src/gui/res/mac/: Info.plist  QSKVM.icns
src/gui/res/win/: SKVM.rc
src/gui/src/: AboutDialog.cpp  AboutDialog.h  AboutDialogBase.ui  Action.cpp  Action.h  ActionDialog.cpp  ActionDialog.h  AddClientDialog.cpp  AddClientDialog.h  AppConfig.cpp  AppConfig.h  AppConnectionState.h  AppLocale.cpp  AppLocale.h  BaseConfig.cpp  BaseConfig.h  CommandProcess.cpp  CommandProcess.h  DataDownloader.cpp  DataDownloader.h  ElevateMode.h  FingerprintAcceptDialog.cpp  FingerprintAcceptDialog.h  Hotkey.cpp  Hotkey.h  HotkeyDialog.cpp  HotkeyDialog.h  Ipc.cpp  Ipc.h  IpcClient.cpp  IpcClient.h  IpcReader.cpp  IpcReader.h  KeySequence.cpp  KeySequence.h  KeySequenceWidget.cpp  KeySequenceWidget.h  LogWindow.cpp  LogWindow.h  LogWindowBase.ui  (+45 more)
src/gui/src/updater/: Updater.cpp  Updater.h  Version.cpp  Version.h
src/gui/src/widgets/: Notifications.cpp  Notifications.h  SettingsPage.cpp  SettingsPage.h  Sidebar.cpp  Sidebar.h  StatusBar.cpp  StatusBar.h  TextEdit.cpp  TextEdit.h
src/gui/src/widgets/notifications/: NewVersionNotification.cpp  NewVersionNotification.h  Title.cpp  Title.h
src/gui/src/widgets/pages/settings/: GeneralTabContent.cpp  GeneralTabContent.h  NetworkTabContent.cpp  NetworkTabContent.h  SettingsTabs.cpp  SettingsTabs.h  Tab.cpp  Tab.h
src/gui/src/widgets/sidebar/: Button.cpp  Button.h
src/gui/test/: HotkeyTests.cpp  KeySequenceTests.cpp  Utils.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/arch/: Arch.cpp  Arch.h  ArchDaemonNone.cpp  ArchDaemonNone.h  CMakeLists.txt  IArchDaemon.h  IArchLog.h  IArchMultithread.cpp  IArchMultithread.h  IArchNetwork.h  IArchSystem.h  IArchTaskBar.h  IArchTaskBarReceiver.h  XArch.h
src/lib/base/: BitUtilities.h  CMakeLists.txt  ELevel.h  Event.h  EventQueue.cpp  EventQueue.h  EventQueueTimer.h  EventTarget.cpp  EventTarget.h  EventTypes.h  Fwd.h  IEventQueue.h  IEventQueueBuffer.h  ILogOutputter.h  Log.cpp  Log.h  PriorityQueue.h  SimpleEventQueueBuffer.cpp  SimpleEventQueueBuffer.h  Stopwatch.cpp  Stopwatch.h  String.cpp  String.h  Time.cpp  Time.h  Unicode.cpp  Unicode.h  UniquePtrContainer.h  XBase.cpp  XBase.h  finally.h  log_outputters.cpp  log_outputters.h
src/lib/client/: CMakeLists.txt  Client.cpp  Client.h  ServerProxy.cpp  ServerProxy.h
src/lib/common/: CMakeLists.txt  DataDirectories.h  DataDirectoriesCommon.cpp  DataDirectories_static.cpp  Version.cpp  Version.h  common.h
src/lib/io/: CMakeLists.txt  IStream.h  StreamBuffer.cpp  StreamBuffer.h  StreamFilter.cpp  StreamFilter.h  XIO.cpp  XIO.h  filesystem.cpp  filesystem.h
src/lib/ipc/: CMakeLists.txt  Ipc.cpp  Ipc.h  IpcClient.cpp  IpcClient.h  IpcClientProxy.cpp  IpcClientProxy.h  IpcLogOutputter.cpp  IpcLogOutputter.h  IpcMessage.cpp  IpcMessage.h  IpcServer.cpp  IpcServer.h  IpcServerProxy.cpp  IpcServerProxy.h
src/lib/mt/: CMakeLists.txt  Thread.cpp  Thread.h  XMT.cpp  XMT.h  XThread.h
src/lib/net/: CMakeLists.txt  ConnectionSecurityLevel.h  FingerprintData.cpp  FingerprintData.h  FingerprintDatabase.cpp  FingerprintDatabase.h  Fwd.h  IDataSocket.cpp  IDataSocket.h  IListenSocket.h  ISocket.h  ISocketFactory.h  ISocketMultiplexerJob.h  NetworkAddress.cpp  NetworkAddress.h  SecureListenSocket.cpp  SecureListenSocket.h  SecureSocket.cpp  SecureSocket.h  SecureUtils.cpp  SecureUtils.h  SocketMultiplexer.cpp  SocketMultiplexer.h  TCPListenSocket.cpp  TCPListenSocket.h  TCPSocket.cpp  TCPSocket.h  TCPSocketFactory.cpp  TCPSocketFactory.h  TSocketMultiplexerMethodJob.h  XSocket.cpp  XSocket.h
src/lib/platform/: CMakeLists.txt  EiEventQueueBuffer.cpp  EiEventQueueBuffer.h  EiKeyState.cpp  EiKeyState.h  EiScreen.cpp  EiScreen.h  IMSWindowsClipboardFacade.h  IOSXKeyResource.cpp  IOSXKeyResource.h  IXWindowsImpl.h  ImmuneKeysReader.cpp  ImmuneKeysReader.h  MSWindowsClipboard.cpp  MSWindowsClipboard.h  MSWindowsClipboardAnyTextConverter.cpp  MSWindowsClipboardAnyTextConverter.h  MSWindowsClipboardBitmapConverter.cpp  MSWindowsClipboardBitmapConverter.h  MSWindowsClipboardFacade.cpp  MSWindowsClipboardFacade.h  MSWindowsClipboardHTMLConverter.cpp  MSWindowsClipboardHTMLConverter.h  MSWindowsClipboardTextConverter.cpp  MSWindowsClipboardTextConverter.h  MSWindowsClipboardUTF16Converter.cpp  MSWindowsClipboardUTF16Converter.h  MSWindowsDebugOutputter.cpp  MSWindowsDebugOutputter.h  MSWindowsDesks.cpp  MSWindowsDesks.h  MSWindowsDropTarget.cpp  MSWindowsDropTarget.h  MSWindowsEventQueueBuffer.cpp  MSWindowsEventQueueBuffer.h  MSWindowsHook.cpp  MSWindowsHook.h  MSWindowsHookResource.cpp  MSWindowsHookResource.h  MSWindowsKeyState.cpp  (+85 more)
src/lib/server/: BaseClientProxy.cpp  BaseClientProxy.h  CMakeLists.txt  ClientConnectionByStream.cpp  ClientConnectionByStream.h  ClientConnectionLoggingWrapper.cpp  ClientConnectionLoggingWrapper.h  ClientListener.cpp  ClientListener.h  ClientProxy.cpp  ClientProxy.h  (+13 more)
src/server/: CMakeLists.txt  MSWindowsServerTaskBarReceiver.cpp  MSWindowsServerTaskBarReceiver.h  resource.h  skvms.cpp  skvms.rc
(+166 files in other folders)
